<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20232a"
    android:contentDescription="@string/home"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:src="@drawable/home" />

        <Button
            android:id="@+id/notificaciones"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="irNotificaciones" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignRight="@id/notificaciones"
            android:layout_margin="10dp"
            android:src="@drawable/notificacion" />
    </RelativeLayout>


    <!-- Primera línea -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="184dp"


        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/dumbell" />

        <Button
            style="@style/BotonRedondeado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="irRegistroEntrenamientos"
            android:text="@string/registro_de_entrenamientos" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/golden" />

        <Button
            style="@style/BotonRedondeado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="irMetasSemanales"
            android:text="Metas de la  semana" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/diamond" />

        <Button
            style="@style/BotonRedondeado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="irMetasLargoPlazo"
            android:text="Metas a largo plazo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/profile" />

        <Button
            style="@style/BotonRedondeado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="irPerfil"
            android:text="Perfil" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/profile" />

        <Button
            style="@style/BotonRedondeado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="irEntrenamientos"
            android:text="Entrenamientos" />
    </LinearLayout>


</LinearLayout>